[tool.poetry]
name = "honu-google-adk"
version = "0.1.0"
description = ""
authors = ["gonzalogacc <gonzalogacc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-adk = "^1.13.0"
fastmcp = "^2.10.6"
python-dotenv = "^1.1.1"
pyjwt = "^2.10.1"
structlog = "^25.4.0"
httpx-sse = "==0.4.*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
